--- a/package.json
+++ b/package.json
@@ -3,8 +3,16 @@
   "version": "0.0.0",
   "private": true,
   "dependencies": {
+    "@headlessui/react": "1.7.17",
+    "@heroicons/react": "2.0.18",
+    "components": "^0.1.0",
+    "init": "0.1.2",
+    "npx": "10.2.2",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "run": "1.4.0",
+    "start": "5.1.0",
+    "tailwindcss": "3.3.3"
   },
   "scripts": {
     "start": "react-scripts start",
